--- a/layouts/partials/profile_resume.html
+++ b/layouts/partials/profile_resume.html
@@ -33,6 +33,12 @@
     {{/*  <h3>{{ .Params.profile_picture }}</h3>  */}}
     {{/*  <h3>{{ .Site.Params.name_profile }}</h3>  */}}
     {{/*  <h3>{{ .Params.name_profile }}</h3>  */}}
-    {{ .Content | markdownify}}
+
+    {{/*  Original  */}}
+    {{/*  {{ .Content | markdownify}}  */}}
+    {{/*  This do not delete <span> in .md  */}}
+    {{ .Content | safeHTML}}
+    {{/*  {{ .Content | markdownify | safeHTML}}  */}}
+    {{/*  {{ .Content | safeHTML | markdownify}}  */}}
   </hgroup>
 {{/*  {{ end }}  */}}
