--- a/layouts/shortcodes/text_glitch.html
+++ b/layouts/shortcodes/text_glitch.html
@@ -17,6 +17,7 @@ sync = (bool true/false). If false, the noise FX happens at different times. Def
 {{ $sync := .Get "sync" | default true }}
 {{ $color1 := .Get "color1" | default "" }}
 {{ $color2 := .Get "color2" | default "" }}
+{{ $color3 := .Get "color3" | default "" }}
 {{/*  {{ $color1 := .Get "color1" | default "magenta" }}  */}}
 {{/*  {{ $color2 := .Get "color2" | default "lightgreen" }}  */}}
 {{ $random_max := .Get "random_max" | default 1.0 }}
@@ -42,16 +43,21 @@ sync = (bool true/false). If false, the noise FX happens at different times. Def
 {{ $noise1_delay_p := "" }}
 {{ $noise2_delay_p := "" }}
 
-{{ $color_properties := "" }}
+{{ $color_properties := slice }}
 {{ if $color1 }}
-	{{ $color_properties = printf "--glitch-color-1: %s" $color1 }}
-	{{/*  {{ $color_properties = "PASAAA" }}  */}}
+	{{ $c1 := printf "--glitch-color-1: %s" $color1 }}
+	{{ $color_properties = $color_properties | append $c1}}
 {{ end }}
 {{ if $color2 }}
-	{{ $color_properties = printf "%s; --glitch-color-2: %s" $color_properties $color2 }}
-	{{/*  {{ $color_properties = "guasaaaaaaaaa" }}  */}}
+	{{ $c2 := printf "--glitch-color-2: %s" $color2 }}
+	{{ $color_properties = $color_properties | append $c2}}
+{{ end }}
+{{ if $color3 }}
+	{{ $c3 := printf "--glitch-color-3: %s" $color3 }}
+	{{ $color_properties = $color_properties | append $c3}}
 {{ end }}
 
+{{ $color_properties = delimit $color_properties ";"}}
 
 {{/*  {{ $color1 := .Get "color1" | default 0.0 }}  */}}
 
@@ -113,7 +119,7 @@ sync = (bool true/false). If false, the noise FX happens at different times. Def
 
 
 		{{ $style_properties := slice $color_properties $noise1_delay_p $noise2_delay_p $rotation_p $duration $delay_property $glitch_direction_property }}
-				{{ $non_empty_style_properties := complement (slice "") (slice nil) $style_properties }}
+		{{ $non_empty_style_properties := complement (slice "") (slice nil) $style_properties }}
 
 		{{ $css_style := delimit $non_empty_style_properties ";"}}
 		{{ $output = printf "%s<span class='%s' data-text='%s' style='%s'>%s</span>" $output $css_class $data_text $css_style $char}}
