--- a/layouts/shortcodes/text_glitch.html
+++ b/layouts/shortcodes/text_glitch.html
@@ -7,6 +7,9 @@ time = (float) The total time for the animation. Default: 5
 font = (int (0,1,2)) 1 = Terminal font, 2 = Pixel art font. Default: 0 (do not change the original font)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
 sync = (bool true/false). If false, the noise FX happens at different times. Default: true
+color1 = color (hex, name). The color for the FX. Default: magenta
+color2 = color (hex, name). The color for the FX. Default: lightgreen
+color3 = color (hex, name). The color for the FX. Default: transparent
   */}}
 
 {{/*  {{ $text := .Get 0 }}  */}}
