--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -7,7 +7,8 @@ time = (float) The total time for the animation. Default: 5
 font = (int (0,1,2)) 1 = Terminal font, 2 = Pixel art font. Default: 0 (do not change the original font)
 spacing = (float) Space between letters. Default: nil (inherited value)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
-intensity = (float) Displacement intensity. Default: 1.0
+offset = (float) Displacement intensity. Default: 2.0
+fx = (float) Force of the effect (multiplies different values to increase their intensity). Default: 1.0
 randomness = (float) Displacement randomness. Default: 0.0
 time_variation = (float) random value for the time. Default: 0.0
   */}}
@@ -21,6 +22,8 @@ time_variation = (float) random value for the time. Default: 0.0
 
 {{ $text := .Get "text" }}
 {{ $steps := .Get "steps" | default 4 }}
+{{ $offset := float ((.Get "offset") | default 2.0) }}
+{{ $fx := float ((.Get "fx") | default 1.0) }}
 {{ $animation_time := float ((.Get "time") | default 5) }}
 {{ $time_variation := float ((.Get "time_variation") | default 0.0) }}
 {{ $letter_spacing := (.Get "spacing") }}
@@ -28,15 +31,16 @@ time_variation = (float) random value for the time. Default: 0.0
 {{ $font := .Get "font" | default 0 }}
 {{ $rotation := .Get "rotation" | default 10 }}
 
+
+{{/*  NOT USED  */}}
 {{ $random_max := .Get "random_max" | default 1.0 }}
 {{ $random_min := .Get "random_min" | default 0.0 }}
-{{ $intensity := float ((.Get "intensity") | default 1.0) }}
 {{ $randomness := float ((.Get "random") | default 0.0) }}
 {{ $glitch_type := .Get "type" | default 1 }}
 
 
 
-{{ $skew_strength := $intensity }}
+{{ $skew_strength := $offset }}
 
 {{ if not $text }}
   {{ errorf "shortcode text_glitch.html: 'text' argument not found" }}
@@ -95,14 +99,15 @@ time_variation = (float) random value for the time. Default: 0.0
 	{{/*  CREATE HANDWRITEN VARS  */}}
 	{{ $hw_css_vars := slice }}
 	{{ range $i := (seq $steps) }}
-		{{ $random_displace_x := math.Rand | mul $intensity | math.Ceil}}
-		{{ $random_displace_y := math.Rand | mul $intensity | math.Ceil}}
+		{{ $random_displace_x := math.Rand | mul $offset | mul $fx | math.Ceil }}
+		{{ $random_displace_y := math.Rand | mul $offset | mul $fx | math.Ceil }}
 		{{ $var_x := printf "%s%d:%fpx" $css_vars_basename_x (sub $i 1) $random_displace_x }}
 		{{ $var_y := printf "%s%d:%fpx" $css_vars_basename_y (sub $i 1) $random_displace_y }}
 		
 		{{/*  {{ $random_rotation := math.Rand | mul $rotation | mul 2 }}  */}}
 		{{ $random_rotation := math.Rand | mul 2 | sub 1 | mul $rotation }}
 		{{ $random_rotation = sub $random_rotation (div $random_rotation 2) }}
+		{{ $random_rotation = mul $random_rotation $fx }}
 		{{ $var_rot := printf "%s%d:%fdeg" $css_vars_basename_rotation (sub $i 1) $random_rotation }}
 
 
@@ -147,7 +152,7 @@ time_variation = (float) random value for the time. Default: 0.0
 		{{ $duration := printf "animation-duration:%fs" $time_dur }}
 
 		{{ $glitch_direction_property := printf "--glitch-direction:%f" ($glitch_direction | mul $skew_strength) }}
-		{{ $intensity_p := printf "--glitch-intensity:%f" (float $intensity) }}
+		{{ $intensity_p := printf "--glitch-intensity:%f" (float $offset) }}
 
 		{{/*  {{ $style_properties := slice $hw_css_vars_string $rand_p $intensity_p $color_properties $noise1_delay_p $noise2_delay_p $rotation_p $duration $delay_property $glitch_direction_property }}  */}}
 		{{ $style_properties := slice $duration $hw_css_vars_string}}
