--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -7,9 +7,8 @@ time = (float) The total time for the animation. Default: 5
 font = (int (0,1,2)) 1 = Terminal font, 2 = Pixel art font. Default: 0 (do not change the original font)
 spacing = (float) Space between letters. Default: nil (inherited value)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
-offset = (float) Displacement intensity. Default: 2.0
+offset = (float) Letters displacement intensity. Default: 2.0
 fx = (float) Force of the effect (multiplies different values to increase their intensity). Default: 1.0
-randomness = (float) Displacement randomness. Default: 0.0
 time_variation = (float) random value for the time. Default: 0.0
   */}}
 
@@ -21,26 +20,22 @@ time_variation = (float) random value for the time. Default: 0.0
 
 
 {{ $text := .Get "text" }}
-{{ $steps := .Get "steps" | default 4 }}
-{{ $offset := float ((.Get "offset") | default 2.0) }}
-{{ $fx := float ((.Get "fx") | default 1.0) }}
-{{ $animation_time := float ((.Get "time") | default 5) }}
-{{ $time_variation := float ((.Get "time_variation") | default 0.0) }}
-{{ $letter_spacing := (.Get "spacing") }}
-{{ $frame_time := float ((.Get "frame_time") | default .5) }}
 {{ $font := .Get "font" | default 0 }}
+{{ $frame_time := float ((.Get "frame_time") | default .5) }}
+{{ $time_variation := float ((.Get "time_variation") | default 0.0) }}
+{{ $offset := float ((.Get "offset") | default 2.0) }}
 {{ $rotation := .Get "rotation" | default 10 }}
+{{ $fx := float ((.Get "fx") | default 1.0) }}
+{{ $letter_spacing := (.Get "spacing") }}
 
+{{/*  Must be the same as the steps in the keyframe animation in handwritten.scss  */}}
+{{ $STEPS := 10 }}
 
 {{/*  NOT USED  */}}
 {{ $random_max := .Get "random_max" | default 1.0 }}
 {{ $random_min := .Get "random_min" | default 0.0 }}
 {{ $randomness := float ((.Get "random") | default 0.0) }}
-{{ $glitch_type := .Get "type" | default 1 }}
 
-
-
-{{ $skew_strength := $offset }}
 
 {{ if not $text }}
   {{ errorf "shortcode text_glitch.html: 'text' argument not found" }}
@@ -57,33 +52,6 @@ time_variation = (float) random value for the time. Default: 0.0
 	{{ $top_css_class = printf "%s %s" $top_css_class "handwritten-font" }}
 {{ end }}
 
-{{ $noise_delay1 := 0.0 }}
-{{ $noise_delay2 := 0.0 }}
-{{ $noise1_delay_p := "" }}
-{{ $noise2_delay_p := "" }}
-
-
-{{/*  {{ $color1 := .Get "color1" | default 0.0 }}  */}}
-
-
-{{ $chars := split $text "" }}
-{{ $rawFrequency := float ((.Get "delay") | default .1) }}
-{{ $frequency := mul (math.Abs $rawFrequency) -1 }}
-
-{{ $speed_sign := -1 }}
-{{ if lt $rawFrequency 0.0 }}
-	{{ $speed_sign = 1 }}
-{{ end }}
-
-
-{{ $amp := float ((.Get "amp") | default 20) }}
-{{ $half_amp := div $amp 2.0 }}
-
-
-
-{{$max_y := $half_amp}}
-{{$min_y := mul $half_amp -1.0}}
-
 {{ $top_style := ""}}
 {{ if $letter_spacing }}
 	{{ $top_style = printf "--handwritten-space: %fem;" $letter_spacing | safeCSS }}
@@ -91,12 +59,14 @@ time_variation = (float) random value for the time. Default: 0.0
 {{ end }}
 
 <span class="{{ $top_css_class }}" style="{{ $top_style }}">
+
 {{$output := ""}}
+{{ $chars := split $text "" }}
 {{- range $index, $char := $chars -}}
 
 	{{/*  CREATE HANDWRITEN CSS VARS  */}}
 	{{ $hw_css_vars := slice }}
-	{{ range $i := (seq $steps) }}
+	{{ range $i := (seq $STEPS) }}
 		{{ $random_displace_x := math.Rand | mul $offset | mul $fx | math.Ceil }}
 		{{ $random_displace_y := math.Rand | mul $offset | mul $fx | math.Ceil }}
 		{{ $var_x := printf "%s%d:%fpx" $css_vars_basename_x (sub $i 1) $random_displace_x }}
@@ -116,33 +86,15 @@ time_variation = (float) random value for the time. Default: 0.0
 	{{ $hw_css_vars_string := delimit $hw_css_vars ";" }}
 
 
-	{{/*  {{ $delay := math.Rand | mul 5 }}  */}}
-	{{ $delay := math.Rand | mul 5 | add 3 }}
-	{{/*  {{ $delay := (math.Rand | mul 5 | add 3) }}  */}}
-
-
-	{{/*  NOTE THIS ADDS WHITESPACES!  */}}
-	{{/*  INFO  https://discourse.gohugo.io/t/hugo-range-function-adds-extra-whitespace-between-spans/33219 */}}
-	{{/*  <span class="wavy-text" style="animation-duration:{{$animation_time}}s; animation-delay: {{$delay | safeCSS}}s; --y-wave-translate-min:{{$min_y}}px; --y-wave-translate-max:{{$max_y}}px;">{{- $char -}}</span>  */}}
 	{{if eq $char " "}}
-		{{/*  {{ $output = printf "%s$nbsp;" ($output | safeHTMLAttr) }}  */}}
 		{{ $output = printf "%s<span> </span>" ($output | safeHTMLAttr) }}
 	{{ else }}
-		{{/*  {{ $output = printf "%s<span class='%s' data-text='%s' style='animation-duration:%fs; animation-delay:%fs; --y-wave-translate-min:%fpx; --y-wave-translate-max:%fpx;'>%s</span>" $output $css_class $data_text $animation_time ($delay) $min_y $max_y $char }}  */}}
-
-		{{/*  APROACH with styles slice  */}}
-		{{ $delay_property := printf "animation-delay:%fs" $delay }}
-		{{/*  {{ $duration_p := printf "animation-duration:%fs" $animation_time }}  */}}
 		{{/*  Add the randomness to duration  */}}
-		{{/*  {{ $rand_dur := mul math.Rand 2 | sub 1 | mul $time_variation }}  */}}
 		{{ $rand_dur := mul (sub (mul math.Rand 2) -1) $time_variation }}
-		{{ $time_dur := (mul $frame_time $steps ) }}
+		{{ $time_dur := (mul $frame_time $STEPS ) }}
 		{{ $time_dur = add $time_dur $rand_dur }}
 		{{ $duration_p := printf "animation-duration:%fs" $time_dur }}
 
-		{{ $intensity_p := printf "--glitch-intensity:%f" (float $offset) }}
-
-		{{/*  {{ $style_properties := slice $hw_css_vars_string $rand_p $intensity_p $color_properties $noise1_delay_p $noise2_delay_p $rotation_p $duration_p $delay_property $glitch_direction_property }}  */}}
 		{{ $style_properties := slice $duration_p $hw_css_vars_string}}
 		{{ $non_empty_style_properties := complement (slice "") (slice nil) $style_properties }}
 
