--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -1,5 +1,5 @@
 {{/*  
-Adds a glitchy effect to a text
+Makes the text looks like it is handwritten animated.
 
 Arguments:
 text = (string) Text with the glitch effect
@@ -7,16 +7,16 @@ time = (float) The total time for the animation. Default: 5
 font = (int (0,1,2)) 1 = Terminal font, 2 = Pixel art font. Default: 0 (do not change the original font)
 spacing = (float) Space between letters. Default: nil (inherited value)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
+scale = (float) Random variation in the letter's scale. Default 0.0 (no variation in the scale)
 offset = (float) Letters displacement intensity. Default: 2.0
 fx = (float) Force of the effect (multiplies different values to increase their intensity). Default: 1.0
 time_variation = (float) random value for the time. Default: 0.0
   */}}
 
-{{/*  {{ $text := .Get 0 }}  */}}
-
 {{ $css_vars_basename_x := "--handwritten-x" }}
 {{ $css_vars_basename_y := "--handwritten-y" }}
 {{ $css_vars_basename_rotation := "--handwritten-rot" }}
+{{ $css_vars_basename_scale := "--handwritten-scale" }}
 
 
 {{ $text := .Get "text" }}
@@ -25,6 +25,7 @@ time_variation = (float) random value for the time. Default: 0.0
 {{ $time_variation := float ((.Get "time_variation") | default 0.0) }}
 {{ $offset := float ((.Get "offset") | default 2.0) }}
 {{ $rotation := .Get "rotation" | default 10 }}
+{{ $scale_variation := (.Get "scale") }}
 {{ $fx := float ((.Get "fx") | default 1.0) }}
 {{ $letter_spacing := (.Get "spacing") }}
 
@@ -77,6 +78,17 @@ time_variation = (float) random value for the time. Default: 0.0
 		{{ $random_rotation = sub $random_rotation (div $random_rotation 2) }}
 		{{ $random_rotation = mul $random_rotation $fx }}
 		{{ $var_rot := printf "%s%d:%fdeg" $css_vars_basename_rotation (sub $i 1) $random_rotation }}
+		
+		{{ if $scale_variation }}
+			{{/*  {{ $random_scale := math.Rand | mul $scale_variation | add 1.0 }}  */}}
+			{{/*  {{ $random_scale := math.Rand | sub 1 | mul $scale_variation | add 1.0 }}  */}}
+			{{ $random_scale := math.Rand | mul 2 | sub 1 | mul $scale_variation | add 1.0 }}
+			{{/*  {{ $random_scale := math.Rand | sub 1 | mul $scale_variation }}  */}}
+			{{/*  {{ $random_scale := math.Rand | mul 2 | sub 1 | mul $scale_variation | add 1.0 }}  */}}
+			{{/*  {{ $random_scale := 1.0 }}  */}}
+			{{ $var_scale := printf "%s%d:%f" $css_vars_basename_scale (sub $i 1) $random_scale }}
+			{{ $hw_css_vars = $hw_css_vars | append $var_scale }}
+		{{ end }}
 
 
 		{{ $hw_css_vars = $hw_css_vars | append $var_x }}
