--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -9,7 +9,7 @@ spacing = (float) Space between letters. Default: nil (inherited value)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
 scale = (float) Random variation in the letter's scale. Default 0.0 (no variation in the scale)
 offset = (float) Letters displacement intensity. Default: 2.0
-fx = (float) Force of the effect (multiplies different values to increase their intensity). Default: 1.0
+fx = (float) Force of the effect (multiplies different values to increase the FX intensity). Default: 1.0
 time_variation = (float) random value for the time. Default: 0.0
   */}}
 
@@ -82,7 +82,8 @@ time_variation = (float) random value for the time. Default: 0.0
 		{{ if $scale_variation }}
 			{{/*  {{ $random_scale := math.Rand | mul $scale_variation | add 1.0 }}  */}}
 			{{/*  {{ $random_scale := math.Rand | sub 1 | mul $scale_variation | add 1.0 }}  */}}
-			{{ $random_scale := math.Rand | mul 2 | sub 1 | mul $scale_variation | add 1.0 }}
+			{{/*  The random scales pivots around 1.0  */}}
+			{{ $random_scale := math.Rand | mul 2 | sub 1 | mul (mul $scale_variation $fx) | add 1.0 }}
 			{{/*  {{ $random_scale := math.Rand | sub 1 | mul $scale_variation }}  */}}
 			{{/*  {{ $random_scale := math.Rand | mul 2 | sub 1 | mul $scale_variation | add 1.0 }}  */}}
 			{{/*  {{ $random_scale := 1.0 }}  */}}
