--- a/layouts/shortcodes/text_shimmer.html
+++ b/layouts/shortcodes/text_shimmer.html
@@ -1,13 +1,36 @@
+{{/*  
+Makes a shimmer/bright animation with position and scale animations.
+
+Arguments:
+text = (string) Text with the effect
+time = (float) Animation time. Default: 2.4 (s)
+delay = (float) Delay time for each char. Default: 0.05 (s)
+blur = (int) Default: 12 (px)
+color1 = 
+color2 = 
+color1-light = 
+color2-light = 
+color1-dark = 
+color2-dark = 
+scale = (float) Scale animation. Default: 1.3
+x = (int) X Displacement animation. Default: 0 (px)
+y = (int) Y Displacement animation. Default: 0 (px)
+z = (DEPRECATED) (int) Z Displacement animation Default: 0 (px)
+*/}}
+
 <!-- raw html -->
 {{/*  {{.Inner}}  */}}
 
 {{/*  {{ $chars := split .Inner "" }}  */}}
 {{ $chars := split (.Get "text") "" }}
-{{/*  {{ $frequency := (.Get 1) | default .2 | mul -1.0}}  */}}
-{{/*  {{ $rawFrequency := (.Get 1) | default .2 }}  */}}
-{{ $rawFrequency := float ((.Get "delay") | default .1) }}
-{{/*  {{ $frequency := mul (math.Abs $rawFrequency) -1 }}  */}}
-{{ $frequency := mul (math.Abs $rawFrequency) 1.0 }}
+{{ $animation_time := float ((.Get "time") | default 2.4) }}
+{{/*  {{ $time_offset := float ((.Get "time_offset") | default 0.0) }}  */}}
+
+{{/*  {{ $absDelay := (.Get 1) | default .2 | mul -1.0}}  */}}
+{{/*  {{ $rawDelay := (.Get 1) | default .2 }}  */}}
+{{ $rawDelay := float ((.Get "delay") | default .05) }}
+{{/*  {{ $absDelay := mul (math.Abs $rawDelay) -1 }}  */}}
+{{ $absDelay := math.Abs $rawDelay }}
 
 {{/*  {{ $amp := (.Get "amp") | default 20 }}  */}}
 {{ $amp := float ((.Get "amp") | default 20) }}
@@ -44,7 +67,6 @@
 {{$max_y := $half_amp}}
 {{$min_y := mul $half_amp -1.0}}
 {{/*  {{$animation_time := (.Get "time") | default 1}}  */}}
-{{$animation_time := float ((.Get "time") | default 2.4) }}
 
 
 {{/*  {{ range $index, $char := $chars }}
@@ -55,17 +77,17 @@
 {{/*  <div class="wave-text">  */}}
 {{/*  {{$output := "<span class='shimmer'>"}}  */}}
 
-{{ $time_start_offset := ((.Get "offset") | default 0.0) }}
+{{ $time_start_offset := ((.Get "time_offset") | default 0.0) }}
 {{ $_init_delay := add -99999.9 $time_start_offset}}
 
 {{ $speed_sign := 1 }}
-{{ if lt $rawFrequency 0.0 }}
+{{ if lt $rawDelay 0.0 }}
 	{{ $speed_sign = -1 }}
 {{ end }}
 
 {{$output := "<span class='shimmer'>"}}
 {{- range $index, $char := $chars -}}
-	{{ $delay := mul $index ($frequency) }}
+	{{ $delay := mul $index ($absDelay) }}
 	{{ $delay = mul $delay $speed_sign  }}
 	{{/*  {{ $delay := mul $index (0.3) }}  */}}
 	{{/*  {{ $delay = float $delay }}  */}}
@@ -80,10 +102,7 @@
 	
 	{{/*  {{ $delay = 0.0 }}  */}}
 
-	{{/*  DELETE tx y demás  */}}
-	{{$tx := 0.0 }}
-	{{$ty := 0.0 }}
-	{{$tz := 30.0 }}
+
 
 	
 	{{/*  {{ $_shimmer_translate := printf "--shimmer-translate:translate3D(%fpx, %fpx, %fpx)" $tx $ty $tz }}  */}}
@@ -106,7 +125,8 @@
 	{{ else }}
 		{{/*  {{ $output = printf "%s<span style='animation-duration:%fs; animation-delay:%fs; --y-wave-translate-min:%fpx; --y-wave-translate-max:%fpx;'>%s</span>" $output $animation_time ($delay) $min_y $max_y $char }}  */}}
 		{{/*  {{ $output = printf "%s<span style='--shimmer-translate:%s;animation-duration:%fs; animation-delay:%fs; --y-wave-translate-min:%fpx; --y-wave-translate-max:%fpx;'>%s</span>" $output $_shimmer_translate $animation_time ($delay) $min_y $max_y $char }}  */}}
-		{{ $output = printf "%s<span style='%s;animation-duration:%fs; animation-delay:%fs; --y-wave-translate-min:%fpx; --y-wave-translate-max:%fpx;'>%s</span>" $output $_shimmer_properties $animation_time ($delay) $min_y $max_y $char }}
+		{{/*  {{ $output = printf "%s<span style='%s;animation-duration:%fs; animation-delay:%fs; --y-wave-translate-min:%fpx; --y-wave-translate-max:%fpx;'>%s</span>" $output $_shimmer_properties $animation_time ($delay) $min_y $max_y $char }}  */}}
+		{{ $output = printf "%s<span style='%s;animation-duration:%fs; animation-delay:%fs;'>%s</span>" $output $_shimmer_properties $animation_time ($delay) $char }}
 	{{ end }}
 {{- end -}}
 
