--- a/assets/css/shortcodes/shimmer.scss
+++ b/assets/css/shortcodes/shimmer.scss
@@ -9,7 +9,8 @@ $text: #ce1414;
 	// text-wrap: stable;
 	// white-space: nowrap;
 	position: relative;
-	top: -.02em;
+	// top: -.02em;
+	// top: .01em;
 
 }
 .dark .shimmer{
@@ -67,6 +68,9 @@ span{
 
 .light .shimmer{
 	color: currentColor;
+	// color: var(--text-1);
+	// color: #737373;
+	// background-color: currentColor;
 	--shimer-active-color: currentColor
 	--shimer-coco: currentColor;
 	perspective: 80px;
@@ -78,6 +82,7 @@ span{
 		transition: all .3s ease;
 		display: inline-block;
 		animation: shimmer-light 2.4s ease infinite;
+		// animation: shimmer 2.4s ease infinite;
 		letter-spacing: 0.01em;
 		transform-origin: 100% 50%;
 		transform-style: preserve-3d;
@@ -139,7 +144,7 @@ span{
 	}
   100%{
 	  transform: scale(1);
-	  opacity: .8;
+	//   opacity: .8;
 	  color: var(--shimer-active-color);
 	}
 }
@@ -165,10 +170,13 @@ span{
 		
 		// text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 		// text-shadow: -1px -1px 0 var(--shimmer-color-1), 1px -1px 0 var(--shimmer-color-1), -1px 1px 0 var(--shimmer-color-1), 1px 1px 0 var(--shimmer-color-1);
-		-webkit-text-stroke: 1px var(--shimmer-color-1-light);
+		
+		// -webkit-text-stroke: 1px var(--shimmer-color-1-light);
+		text-shadow: 0 0 var(--shimmer-blur-pixels, 12px) var(--shimmer-color-1-light);
+
 	}
 	24%{
-		-webkit-text-stroke: 0px var(--shimmer-color-1-light);
+		// -webkit-text-stroke: 0px var(--shimmer-color-1-light);
 	//   text-shadow: 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000, 0px 0px 0 #000;
 	//   text-shadow: 0px 0px 0 var(--shimmer-color-2), 0px 0px 0 var(--shimmer-color-2), 0px 0px 0 var(--shimmer-color-2), 0px 0px 0 var(--shimmer-color-2);
 
@@ -184,7 +192,9 @@ span{
 	}
   100%{
 	  transform: scale(1);
-	  opacity: .8;
+	//   opacity: .8;
+	//   opacity: .9;
+	//   opacity: 1.0;
 	  color: var(--shimer-active-color);
 	}
 }
