--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -417,7 +417,7 @@ hgroup.articles-content{
 	text-align: center;
     border-bottom: 0px solid transparent;
 }
-html.light #article-title{
+html.light .article-title{
 	// text-shadow: 1px 3px 3px #4b4b4b;
 	// text-shadow: 0px 3px 3px var(--text-2);
 	text-shadow: 
@@ -444,7 +444,7 @@ html.light #article-title{
 	// text-shadow: 0px 0px 5px var(--hover-color), 0px 0px 10px var(--hover-color), 0px 0px 10px var(--hover-color),
 	// 	0px 0px 20px var(--hover-color);
 }
-html.dark #article-title{
+html.dark .article-title{
 	// text-shadow: 1px 3px 3px #4b4b4b;
 	// text-shadow: 0px 3px 3px var(--text-2);
 	text-shadow: 0px 1px 3px var(--hover-color),
