--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -21,3 +21,35 @@
 	font-weight: 400;
 	font-style: normal;
   }
+
+/*
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+.handwritten-font2 {
+	font-family: "Permanent Marker", cursive;
+	font-weight: 400;
+	font-style: normal;
+  }
+
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+.handwritten-font3 {
+font-family: "Rock Salt", cursive;
+font-weight: 400;
+font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+.handwritten-font4 {
+	font-family: "Reenie Beanie", cursive;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 1.4em;
+  }
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');
+.handwritten-font {
+	font-family: "Schoolbell", cursive;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 1.2em;
+}
